<resources>
    <string name="app_name">FiMo</string>
    <string name="media_picker_select_from">Pilih dari:</string>
    <string name="media_picker_some_permission_is_denied">Izin akses ditolak</string>
    <string name="media_picker_you_need_to_grant_access_to">Anda perlu mengizinkan aplikasi untuk mengakses: \n</string>
    <string name="action_settings">Settings</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibmRvZW5rcyIsImEiOiJjaXdrdGZibzAwMDQ4Mm9udzNkbmRoZG82In0.S64nvaOLm0vaOY9MtzSpfA</string>
    <string name="no_location_detected">Lokasi tidak terdeteksi</string>
    <string name="permission_denied_explanation">Akses lokasi Anda ditolak, izinkan aplikasi untuk mengakses GPS Anda</string>
    <string name="settings">Pengaturan</string>
    <string name="permission_rationale">Izinkan aplikasi untuk mengakses GPS Anda untuk mendeteksi lokasi</string>
    <string name="sign_in">Log in</string>
    <string name="upload">Kirim sekarang</string>
    <string name="save">Simpan, kirim nanti</string>
    <string name="gps_network_not_enabled">GPS harus diaktifkan!</string>
    <string name="open_location_settings">Buka pengaturan</string>
    <string name="action_logout">Logout</string>
    <string name="no_internet_connection">Tidak ada koneksi internet</string>
    <string name="submitted_date">Tanggal diunggah</string>
    <string name="notes">Catatan:</string>
    <string name="you_can_submit_your_record_now_or_save_it_for_sending_later">Anda dapat mengunggah rekaman Anda sekarang, atau simpan untuk dikirim nanti. Anda memerlukan koneksi internet untuk dapat mengirimkan sekarang</string>
    <string name="your_rank">Peringkat saya</string>
    <string name="your_submitted_records">Rekaman yang saya kirimkan</string>
    <string name="your_verified_records">Rekaman saya yang terverifikasi</string>
    <string name="total_records">Jumlah total rekaman FiMo</string>
    <string name="my_local_records">Rekaman lokal</string>
    <string name="upload_all">Unggah semua</string>
    <string name="please_add_any_additional_notes">Harap masukkan catatan tambahan:</string>
    <string name="select_image">Ambil foto</string>
    <string name="yes">ya</string>
    <string name="no">tidak</string>
    <string name="maybe">mungkin</string>
    <string name="please_select_image_first">Pilih gambar terlebih dahulu!</string>
    <string name="image_file_is_not_exist">File gambar tidak ditemukan!</string>
    <string name="accuracy">Akurasi:</string>
    <string name="searching_your_location">Sedang mencari lokasi Anda...</string>
    <string name="your_location_is_not_precise">Lokasi Anda tidak akurat!</string>
    <string name="upload_failed_please_retry">Pengiriman gagal, harap ulangi kembali!</string>
    <string name="sign_in_error">Error:</string>
    <string name="please_wait">Mohon tunggu...</string>
    <string name="press_back_once_again_to_exit_from_the_app">Tekan tombol back satu kali lagi untuk keluar dari aplikasi</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="red_tide_image">Foto air</string>
    <string name="back">Kembali</string>
    <string name="water_condition">Kondisi Air</string>
    <string name="weather_condition">Kondisi Cuaca</string>
    <string name="environment_condition">Kondisi Lingkungan</string>
    <string name="environment_image">Foto lingkungan sekitar</string>
    <string name="finish">Selesai</string>
    <string name="red_tide_location">Lokasi</string>
    <string name="delete_image">Hapus foto</string>
    <string name="survey_cancel">Mohon selesaikan pengisian survey ini</string>
    <string name="survey_empty_rb_answer">Pilih 1 jawaban</string>
    <string name="survey_empty_cb_answer">Pilih setidaknya 1 jawaban</string>
    <string name="survey_empty_et_answer">Isi jawaban di kolom yang tersedia</string>
    <string name="version">Versi aplikasi</string>
    <string name="sign_up">Sign up</string>
    <string name="terms_and_condition">In this application, you will be asked to enter data related to the fishes. Also, you will be asked to fill out questionnaires afterward. By using this application, you agree that:\n
    1. Any information you submit will be kept confidential\n
    2. Your name or any information that might identify you in the study report will not be used\n
    3. Your participation is completely voluntary\n
    4. You have the right to withdraw your participation at any time or refuse to answer some of the questions\n
    5. The data that you upload will be analyzed only for academic purposes and will be published in the form of statistical aggregations in scientific journals or conferences</string>
    <string name="registrasi">Registration</string>
    <string name="nama_lengkap">Nama lengkap</string>
    <string name="masukkan_nama_lengkap_anda">Enter your full name</string>
    <string name="email">Alamat Email</string>
    <string name="masukkan_email_anda_yang_valid">Enter your valid email address</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="masukkan_kata_sandi_minimal_6_karakter">Enter a password of at least 6 characters</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="usia_dalam_tahun">Age</string>
    <string name="masukkkan_usia">Enter your age</string>
    <string name="alamat_domisili_saat_ini">Alamat domisili</string>
    <string name="masukkan_alamat_anda">Enter your current domicile address</string>
    <string name="kode_pos_domisili_saat_ini">Kode pos</string>
    <string name="masukkkan_kode_pos">Enter zip code of your current address</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="masukkan_pekerjaan_anda">Enter your occupation</string>
    <string name="tingkat_pendidikan">Tingkat pendidikan</string>
    <string name="dengan_tap_tombol_lanjutkan">By tapping the continue button</string>
    <string name="saya_setuju_dengan">I agree with</string>
    <string name="syarat_dan_ketentuan">consent, terms, and conditions</string>
    <string name="lanjutkan">Continue</string>
    <string name="consent">Informed consent, terms, and conditions</string>
    <string name="verifikasi_nomor_handphone">Verify your phone number</string>
    <string name="masukkan_kode_verifikasi_otp_yang_dikirimkan_ke_nomor_handphone_anda_melalui_sms">Enter the verification code (OTP) sent to your mobile number via SMS</string>
    <string name="kode_verifikasi_otp">Verification code (OTP)</string>
    <string name="masukkan_kode_verifikasi_otp">Enter the verification code (OTP)</string>
</resources>
