<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="10dp">

        <ImageView
            android:visibility="gone"
            android:id="@+id/iv_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_close_black" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/iv_finish">

            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/iv_finish"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/consent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_content"
                        android:layout_marginTop="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="4sp"
                        android:text="@string/terms_and_condition"
                        android:textColor="#333333"
                        android:alpha="0.7"
                        android:textSize="14sp" />

                    <TextView

                        android:layout_marginTop="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dengan_tap_tombol_lanjutkan"
                        android:textAlignment="center"
                        android:gravity="center_horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/saya_setuju_dengan" />

                    <TextView
                        android:id="@+id/tv_tnc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/syarat_dan_ketentuan"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/bt_change"

                        android:layout_marginTop="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:background="@color/colorAccent"
                        android:letterSpacing="0.1"
                        android:text="@string/lanjutkan"
                        android:textColor="#FFF"
                        android:textSize="16sp" />
                </LinearLayout>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>



    </RelativeLayout>

</RelativeLayout>