<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update fragment_blank fragment layout -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verifikasi_nomor_handphone"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/masukkan_kode_verifikasi_otp_yang_dikirimkan_ke_nomor_handphone_anda_melalui_sms" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kode_verifikasi_otp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_verification_code"
                    app:hintEnabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:textColorHint="#4d333333"
                        android:backgroundTint="#d8d8d8"
                        android:hint="@string/masukkan_kode_verifikasi_otp" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>