<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/bt_change">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/registrasi"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_lengkap" />

                <com.google.android.material.textfield.TextInputLayout
                    app:hintEnabled="false"
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:backgroundTint="#d8d8d8"
                        android:hint="@string/masukkan_nama_lengkap_anda"
                        android:textColorHint="#4d333333" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <com.google.android.material.textfield.TextInputLayout
                    app:hintEnabled="false"
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:backgroundTint="#d8d8d8"
                        android:hint="@string/masukkan_email_anda_yang_valid"
                        android:textColorHint="#4d333333" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <RelativeLayout
                android:layout_marginTop="16dp"
                android:id="@+id/layout_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kata_sandi" />

                    <com.google.android.material.textfield.TextInputLayout
                        app:hintEnabled="false"
                        android:id="@+id/et_pwd"
                        app:passwordToggleEnabled="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-4dp"
                            android:layout_marginRight="-4dp"
                            android:backgroundTint="#d8d8d8"
                            android:hint="@string/masukkan_kata_sandi_minimal_6_karakter"
                            android:inputType="textPassword"
                            android:textColorHint="#4d333333" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jenis_kelamin" />

                <androidx.appcompat.widget.AppCompatSpinner
                    app:backgroundTint="#d8d8d8"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:enabled="false"
                    android:clickable="false"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_gender"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/usia_dalam_tahun" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:backgroundTint="#d8d8d8"
                        android:hint="@string/masukkkan_usia"
                        android:inputType="number"
                        android:textColorHint="#4d333333" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!--LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tanggal lahir" />

                <com.google.android.material.textfield.TextInputLayout
                    app:hintEnabled="false"
                    android:id="@+id/et_bod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:backgroundTint="#d8d8d8"
                        android:drawableRight="@drawable/ic_calendaar"
                        android:hint="Masukkan tanggal lahir Anda"
                        android:textColorHint="#4d333333" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat_domisili_saat_ini" />

                <com.google.android.material.textfield.TextInputLayout
                    app:hintEnabled="false"
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:backgroundTint="#d8d8d8"
                        android:gravity="top"
                        android:hint="@string/masukkan_alamat_anda"
                        android:inputType="textCapSentences|textMultiLine"
                        android:maxLines="4"
                        android:textColorHint="#4d333333" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kode_pos_domisili_saat_ini" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_zip_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:backgroundTint="#d8d8d8"
                        android:hint="@string/masukkkan_kode_pos"
                        android:inputType="number"
                        android:textColorHint="#4d333333" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Jarak domisili ke laut terdekat" />

                <androidx.appcompat.widget.AppCompatSpinner
                    app:backgroundTint="#d8d8d8"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:enabled="false"
                    android:clickable="false"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_distance"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pekerjaan" />

                <com.google.android.material.textfield.TextInputLayout
                    app:hintEnabled="false"
                    android:id="@+id/et_job"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:backgroundTint="#d8d8d8"
                        android:hint="@string/masukkan_pekerjaan_anda"
                        android:textColorHint="#4d333333" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Afiliasi" />

                <com.google.android.material.textfield.TextInputLayout
                    app:hintEnabled="false"
                    android:id="@+id/et_affiliation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:backgroundTint="#d8d8d8"
                        android:hint="Masukkan institusi afiliasi Anda"
                        android:textColorHint="#4d333333" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tingkat_pendidikan" />

                <androidx.appcompat.widget.AppCompatSpinner
                    app:backgroundTint="#d8d8d8"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:enabled="false"
                    android:clickable="false"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_education"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_tnc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linearLayout"
                android:layout_marginTop="20dp"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dengan_tap_tombol_lanjutkan"
                    android:textAlignment="center"
                    android:gravity="center_horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/saya_setuju_dengan"
                        android:textAlignment="textEnd" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" "/>

                    <TextView
                        android:id="@+id/tv_tnc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/syarat_dan_ketentuan"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/bt_change"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorAccent"
        android:letterSpacing="0.1"
        android:text="@string/lanjutkan"
        android:textColor="#FFF"
        android:textSize="16sp" />
</RelativeLayout>