<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <LinearLayout
                android:padding="16dp"
                android:id="@+id/bottom_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/you_can_submit_your_record_now_or_save_it_for_sending_later"/>

                <Button
                    android:id="@+id/uploadButton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_centerInParent="true"
                    android:text="@string/upload"
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_centerInParent="true"
                    android:text="@string/save"
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:visibility="visible" />
            </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
